# IncreaseVersionApp

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app_apis.rs  app_config.rs  app_errors.rs  callback_validator.rs  installation_token_data.rs  main.rs  webhook_data.rs  worker.rs
tests/: quick_dev.rs
