[package]
name = "increase_version_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# tracing = "0.1.40"
log = "0.4.21"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = "1.0"
thiserror = "1.0.58"
chrono = "0.4.35"
jsonwebtoken = {version = "9.3.0", features = ["use_pem"]}
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22.0"
ipnet = "2.9.0"

[dev-dependencies]
httpc-test = "0.1.1"
